Sistema Lojista, Usuario e Admin funcionando